# developer-farm

./: README.md
docs/QA/: 240110_개발상담.md  서버_배포시_고려할_사항들.md
docs/til/: README.md
docs/til/jpotw/: 회고1.md  회고2.md  회고3.md  회고4.md  회고5.md  회고6.md
docs/til/kpjms6/231201_bithumb_crawl_and_main_setting/: README.md
docs/til/qjmoney/: README.md
docs/til/qjmoney/231118/: README.md  asr.Dockerfile
projects/jpotw/1.summarize_chatting_room/: README.md  app.py  requirements.txt
projects/jpotw/2 bookshorts/: config.py
projects/jpotw/2 bookshorts/bookshorts/: models.py  utils.py
projects/jpotw/2 bookshorts/bookshorts/templates/: index.html  login.html  summarize.html
projects/jpotw/2 bookshorts/bookshorts/views/: auth_views.py  history_views.py  summarize_views.py
projects/jpotw/3.insight_finder/: .gitignore
projects/jpotw/3.insight_finder/vs/: __init__.py  embed.py
projects/jpotw/3.insight_finder/vs/static/: style.css
projects/jpotw/bookshorts/: README.md  requirements.txt
projects/jpotw/bookshorts/backend/: index.js  package-lock.json
projects/jpotw/bookshorts/bookshorts/: __init__.py  forms.py
projects/jpotw/summarize_chatting_room/: utils.py
projects/qjmoney/231119_blogcrawler/: blogcrawler.py  pyproject.toml
projects/qjmoney/231119_blogcrawler/blogcrawler/: blogcrawler.py
projects/qjmoney/231119_blogcrawler/tests/: test_blogcrawler.py
projects/qjmoney/231201_bithumbcrawler/: .gitignore  pyproject.toml
projects/qjmoney/231201_bithumbcrawler/bithumbcrawler/: crawler.py
projects/qjmoney/231201_bithumbcrawler/tests/: test_crawler.py
(+17 files in other folders)
