[tool.poetry]
name = "bithumbcrawler"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
